# sentence-sorter-haskell

./: .gitignore  Main.hs  README.md  sentence-sorter.cabal  test.txt  test1.txt  test2.txt
src/: FileProcessor.hs  Parser.hs  Sorter.hs  Types.hs
