cabal-version:      3.0
name:               sentence-sorter
version:            0.1.0.0
build-type:         Simple

executable sentence-sorter
  main-is:            Main.hs
  other-modules:      Types
                    , Parser
                    , Sorter
                    , FileProcessor
  hs-source-dirs:     ., src
  build-depends:      base >=4.14 && <5.0
                   ,  directory
  default-language:   Haskell2010
